--- a/style.css
+++ b/style.css
@@ -1243,16 +1243,15 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 
 .bck-box.bck-box-8 {
     position: relative;
-    BORDER: 3px solid #ec6f59;
+    BORDER: 3px solid #77AA42;
     border-radius: 20px 80px 20px 80px;
-    border-left: 130px solid #ec6f59;
+    border-left: 130px solid #77AA42;
     padding: 5px 19px;
 }
 
 .bck-box.bck-box-8:after {
-content: " ";
-background-color: red;
-    border-radius: 30px 10px 37px 10px;
+content: none;
+display: none;
 }
 
 .bck-box.bck-box-8:before {
