--- a/style.css
+++ b/style.css
@@ -758,6 +758,16 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     text-transform: uppercase;
 }
 
+.bck-enfasis-10 {
+    color: #ffffff;
+    background-color: #78AA42;
+    border: 2px solid #78AA42 !important;
+    font-family: 'ZineSlabDisOT-Medi';
+    position: relative;
+    top: 24px;
+    font-size: 2rem;
+}
+
 .texto_curso li {
     line-height: 1.8em!important
 }
@@ -1281,7 +1291,7 @@ display: none;
     font-family: 'ZineSlabDisOT-Medi';
 }
 
-.bck-box-1>.bck-title p {
+.bck-box-8>.bck-title p {
     font-size: 2.6rem;
 }
 
@@ -1299,7 +1309,7 @@ display: none;
 }
 
 .bck-box-8>.bck-content p {
-    font-size: 3.2rem
+    font-size: 2rem
 }
 
 
