--- a/style.css
+++ b/style.css
@@ -1336,7 +1336,7 @@ display: none;
 .bck-box.bck-box-9 {
     BORDER: 3px solid #208FCF;
     border-radius: 20px 80px 20px 80px;
-    padding: 30px;
+    padding: 14px 38px 19px 32px;
 }
 
 
