--- a/style.css
+++ b/style.css
@@ -709,15 +709,20 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 .bck-title-5:before {
-    content: "";
-    background-image: url(images/icono_title_05.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 70px;
-    margin-top: -30px;
-    position: absolute;
-    left: 0px;
+    content: "WRITING SKILL";
+    z-index: 100;
+    width: 18%;
+    padding: 10px 11px 10px 24px;
+    background-color: #007c39;
+    display: inline-block;
+    color: #fff;
+    -moz-border-radius: 20px 0 0 50px;
+    border-radius: 20px 0 0 50px;
+    margin-right: 6px;
+    vertical-align: sub;
 }
+
+
 
 /*enfasis*/
 /*.bck-enfasis {
