--- a/style.css
+++ b/style.css
@@ -710,6 +710,9 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 
 .bck-title-5:before {
     content: "WRITING SKILL";
+    background-image: url(images/icono_title_06.png);
+    background-size: contain;
+    background-repeat: no-repeat;
     z-index: 100;
     width: 18%;
     padding: 10px 11px 10px 24px;
