--- a/style.css
+++ b/style.css
@@ -709,12 +709,12 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 .bck-title-5:before {
-    content: "WRITING SKILL";
+    content: "YOUR TURN TO WRITE";
     background-image: url(images/icono_title_06.png);
     background-size: contain;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     z-index: 100;
-    width: 18%;
+    width: 28%;
     padding: 10px 11px 10px 24px;
     background-color: #007c39;
     display: inline-block;
